# art

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  TASKS.md  pyproject.toml
frontend/: index.html  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: paper-review.spec.ts
frontend/src/: App.tsx  index.css
scripts/: deploy-cloud-run.sh  dev.sh  setup.sh
src/agent/: __init__.py
src/agent/adapters/: crewai_flows.py
src/agent/adapters/langgraph/: nodes.py
src/agent/apps/: cli.py
src/agent/core/: graphs.py  io.py  orchestration.py  retrieval.py  retrieval_benchmark.py  state.py  task.py
src/agent/eval/: harness.py  metrics.py  reward.py
src/agent/infra/: adapters.py  config.py  logging.py  roadmap.py  server.py  store.py  tracing.py
src/agent/llm/: __init__.py  openrouter_client.py
src/agent/memory/: base.py  policy.py  working.py
src/alex_agent/: __init__.py
src/alex_agent/adapters/: langchain_tools.py
src/alex_agent/adapters/ag2/: agents.py
src/alex_agent/apps/: cli.py  code_copilot.py  paper_review.py  reading_assistant.py
src/alex_agent/core/: agent.py  loop.py  tool.py
src/alex_agent/eval/: judge_models.py
src/alex_agent/infra/: config.py  server.py  store.py  tracing.py
src/alex_agent/llm/: base.py  google_client.py  openai_client.py  qwen_client.py  router.py
src/alex_agent/memory/: long_term.py  session.py
tests/: test_adapters.py  test_ingestion.py  test_orchestration.py  test_paper_review.py  test_retrieval.py  test_retrieval_benchmark.py  test_roadmap.py  test_tracing.py
(+1 files in other folders)
